compiler/testData/diagnostics/tests/redeclarations/ConflictingExtensionProperties.kt
// FIR_IDENTICAL
package foo

konst Int.<!REDECLARATION!>foo<!>: Int get() = 2
konst Int.<!REDECLARATION!>foo<!>: Int get() = 3
